--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,12 @@
     <artifactId>panda-algorithm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+    </dependencies>
+
 </project>
